--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <div class="write" id="write" v-if="mainPageIndex==1">
-                <input type="text" class="write-input" id="wrInput" v-model="forumContent" placeholder="輸入完畢後按下 Enter 即可發佈留言！">
+                <input type="text" class="write-input" id="wrInput" v-model="forumContent" :placeholder="writeHolder">
                 <i  class="fa-solid fa-paper-plane writeSend" @click="forumEnabled?uploadForum():alert('發布進行中，請稍待片刻','warn')"></i>
             </div>
             <div class="content content3" v-if="mainPageIndex==2">
