--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         <div class="mainPage" v-if="loginSuccess">
             <div class="item-intro it" v-if="openIndex==1">
                 <i @click="closeItem()" class="fa-solid fa-xmark mark"></i>
+                <div class="contentText">商品介紹</div>
                 <div class="img_car_all">
                     <div class="img_car" :id="product_intro.id">
                         <img v-for="obj in product_intro.img" :src="obj" alt="">
@@ -168,7 +169,7 @@
                 <h1 v-text="product_intro.title"></h1>
                 <p>${{product_intro.price}} <span class="intro_id">商品編號：{{product_intro.id}} <i @click="copy(product_intro.id)" class="fa-regular fa-copy copy_icon" title="複製"></i></span></p>
                 <div class="ct-intro">
-                    <p class="ct-intro-title">產品介紹</p>
+                    <p class="ct-intro-title">詳細資訊</p>
                     <p class="ct-intro-main" v-text="product_intro.intro"></p>
                 </div>
                 <div class="item-intro-footer">
