--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="author" content="SCCJ">
     <meta name="description" content="歡迎各位將用不到的東西傳承給學弟妹們！！">
-    <meta name="keywords" content="NCHU,中興大學,興大二手拍,興大APP,NCHU APP">
+    <meta name="keywords" content="校園二手拍,校園APP">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="💰 NCHU 二手拍賣APP">
+    <meta name="twitter:title" content="💰 校園二手拍賣APP">
     <meta name="twitter:description" content="歡迎各位將用不到的東西傳承給學弟妹們！！">
     <meta name="twitter:site" content="@">
     <meta name="twitter:creator" content="@">
     <meta name="twitter:image" content="https://img.onl/rm6DMG">
     <!-- Open Graph general (Facebook, Pinterest)-->
-    <meta property="og:title" content="💰 NCHU 二手拍賣APP">
+    <meta property="og:title" content="💰 校園二手拍賣APP">
     <meta property="og:description" content="歡迎各位將用不到的東西傳承給學弟妹們！！">
     <meta property="og:url" content="https://tsaiii0109.github.io/nchu-secondHand/">
     <meta property="og:site_name" content="tsaiii0109.github.io">
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/version2.css">
-    <title>中興大學二手拍賣場</title>
+    <title>校園二手拍賣場</title>
     <link rel="preconnect" href="https://ka-f.fontawesome.com">
     <script src="js/vue.js" defer></script>
     <script src="js/index.js" defer></script>
